--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,9 +8,9 @@
   "default_locale": "en",
   "action": {
     "default_icon": {
-      "16": "images/icons/default-16.png",
-      "48": "images/icons/default-48.png",
-      "128": "images/icons/default-128.png"
+      "16": "images/icons/preview-16.png",
+      "48": "images/icons/preview-48.png",
+      "128": "images/icons/preview-128.png"
     }
   },
   "permissions": [
@@ -23,9 +23,9 @@
     "<all_urls>"
   ],
   "icons": {
-    "16": "images/icons/default-16.png",
-    "48": "images/icons/default-48.png",
-    "128": "images/icons/default-128.png"
+    "16": "images/icons/preview-16.png",
+    "48": "images/icons/preview-48.png",
+    "128": "images/icons/preview-128.png"
   },
   "background": {
     "service_worker": "background.js"
